--- a/Miniapps/gray-scott/configs/miniapp-settings/settings-ascent.json
+++ b/Miniapps/gray-scott/configs/miniapp-settings/settings-ascent.json
@@ -8,10 +8,10 @@
     "plotgap": 10,
     "steps": 100,
     "noise": 0.0000001,
-    "output_file_name": "",
-    "output_type": "catalyst_insitu",
-    "catalyst_script_path": "/home/kressjm/packages/KAUST_Visualization_Vignettes/Miniapps/gray-scott/install/catalyst-extract-jpg.py",
-    "catalyst_lib_path": "/home/kressjm/packages/paraview-src/build_5.13.3/install/lib/catalyst",
+    "output_file_name": "grayScott-%04ts.vti",
+    "output_type": "ascent",
+    "catalyst_script_path": "",
+    "catalyst_lib_path": "",
     "checkpoint": true,
     "checkpoint_freq": 700,
     "checkpoint_output": "ckpt.bp",
