--- a/Miniapps/gray-scott/configs/miniapp-settings/settings-catalyst-file-io.json
+++ b/Miniapps/gray-scott/configs/miniapp-settings/settings-catalyst-file-io.json
@@ -11,7 +11,7 @@
     "output_file_name": "grayScott-%04ts.vtpd",
     "output_type": "catalyst_io",
     "catalyst_script_path": "",
-    "catalyst_lib_path": "/home/kressjm/packages/gray-scott/paraview-build-512/install/lib/catalyst",
+    "catalyst_lib_path": "/home/kressjm/packages/paraview-src/build_5.13.3/install/lib/catalyst",
     "checkpoint": true,
     "checkpoint_freq": 700,
     "checkpoint_output": "ckpt.bp",
