--- a/Miniapps/gray-scott/configs/miniapp-settings/settings-adios-localcopy.json
+++ b/Miniapps/gray-scott/configs/miniapp-settings/settings-adios-localcopy.json
@@ -1,5 +1,5 @@
 {
-    "L": 64,
+    "L": 128,
     "Du": 0.2,
     "Dv": 0.1,
     "F": 0.01,
@@ -8,16 +8,16 @@
     "plotgap": 10,
     "steps": 100,
     "noise": 0.0000001,
-    "output_file_name": "",
-    "output_type": "catalyst_insitu",
-    "catalyst_script_path": "catalyst-extract-jpg.py",
-    "catalyst_lib_path": "/home/kressjm/packages/paraview-src/build_5.13.3/install/lib/catalyst",
+    "output_type": "adios",
+    "output_file_name": "gs-adios-localcopy.bp",
+    "catalyst_script_path": "",
+    "catalyst_lib_path": "",
     "checkpoint": false,
     "checkpoint_freq": 0,
-    "checkpoint_output": "",
+    "checkpoint_output": "ckpt.bp",
     "restart": false,
-    "restart_input": "",
-    "adios_config": "",
+    "restart_input": "ckpt.bp",
+    "adios_config": "adios2.xml",
     "adios_span": false,
     "adios_memory_selection": false,
     "mesh_type": "",
