--- a/Miniapps/gray-scott/configs/miniapp-settings/settings-vtk-pvti.json
+++ b/Miniapps/gray-scott/configs/miniapp-settings/settings-vtk-pvti.json
@@ -6,19 +6,20 @@
     "k": 0.05,
     "dt": 2.0,
     "plotgap": 10,
-    "steps": 10000,
+    "steps": 100,
     "noise": 0.0000001,
-    "output_file_name": "grayScott.bp",
-    "output_type": "adios",
+    "output_file_name": "grayScott-%04ts.vti",
+    "output_type": "pvti",
     "catalyst_script_path": "",
     "catalyst_lib_path": "",
-    "checkpoint": true,
-    "checkpoint_freq": 100000,
-    "checkpoint_output": "ckpt.bp",
+    "checkpoint": false,
+    "checkpoint_freq": 0,
+    "checkpoint_output": "",
     "restart": false,
-    "restart_input": "ckpt.bp",
-    "adios_config": "adios2.xml",
+    "restart_input": "",
+    "adios_config": "",
     "adios_span": false,
-    "adios_memory_selection": true,
-    "mesh_type": "image"
+    "adios_memory_selection": false,
+    "mesh_type": "",
+    "kombynelite_script_path": ""
 }
