--- a/Miniapps/gray-scott/configs/ascent_scripts/ascent_options.yaml
+++ b/Miniapps/gray-scott/configs/ascent_scripts/ascent_options.yaml
@@ -2,6 +2,6 @@ runtime:
   type: "ascent" # "ascent" "flow" "empty"
   vtkm:
     backend: "openmp"
-actions_file: "ascent-extract-png.yaml"
+actions_file: "ascent-save-data.yaml"
 messages: "quiet" #"verbose" "quiet" # print extra ascent related messages
 timings: "false" #"true" "false" # print a timing file per rank for filters
