--- a/Miniapps/gray-scott/configs/miniapp-settings/ibex-settings-vtk-pvti.json
+++ b/Miniapps/gray-scott/configs/miniapp-settings/ibex-settings-vtk-pvti.json
@@ -12,13 +12,14 @@
     "output_type": "",
     "catalyst_script_path": "",
     "catalyst_lib_path": "",
-    "checkpoint": true,
-    "checkpoint_freq": 700,
-    "checkpoint_output": "ckpt.bp",
+    "checkpoint": false,
+    "checkpoint_freq": 0,
+    "checkpoint_output": "",
     "restart": false,
-    "restart_input": "ckpt.bp",
-    "adios_config": "adios2.xml",
+    "restart_input": "",
+    "adios_config": "",
     "adios_span": false,
     "adios_memory_selection": false,
-    "mesh_type": "image"
+    "mesh_type": "",
+    "kombynelite_script_path": ""
 }
