--- a/Miniapps/gray-scott/configs/miniapp-settings/settings-adios-span.json
+++ b/Miniapps/gray-scott/configs/miniapp-settings/settings-adios-span.json
@@ -1,5 +1,5 @@
 {
-    "L": 64,
+    "L": 128,
     "Du": 0.2,
     "Dv": 0.1,
     "F": 0.01,
@@ -8,17 +8,17 @@
     "plotgap": 10,
     "steps": 100,
     "noise": 0.0000001,
-    "output_file_name": "grayScott-%04ts.vti",
-    "output_type": "ascent",
+    "output_type": "adios",
+    "output_file_name": "gs-adios-span.bp",
     "catalyst_script_path": "",
     "catalyst_lib_path": "",
     "checkpoint": false,
     "checkpoint_freq": 0,
-    "checkpoint_output": "",
+    "checkpoint_output": "ckpt.bp",
     "restart": false,
-    "restart_input": "",
-    "adios_config": "",
-    "adios_span": false,
+    "restart_input": "ckpt.bp",
+    "adios_config": "adios2.xml",
+    "adios_span": true,
     "adios_memory_selection": false,
     "mesh_type": "",
     "kombynelite_script_path": ""
