--- a/Miniapps/gray-scott/configs/miniapp-settings/settings-kombyne.json
+++ b/Miniapps/gray-scott/configs/miniapp-settings/settings-kombyne.json
@@ -1,5 +1,5 @@
 {
-    "L": 64,
+    "L": 128,
     "Du": 0.2,
     "Dv": 0.1,
     "F": 0.01,
@@ -9,17 +9,17 @@
     "steps": 100,
     "noise": 0.0000001,
     "output_file_name": "",
-    "output_type": "catalyst_insitu",
-    "catalyst_script_path": "catalyst-extract-jpg.py",
-    "catalyst_lib_path": "/home/kressjm/packages/paraview-src/build_5.13.3/install/lib/catalyst",
+    "output_type": "kombyne",
+    "catalyst_script_path": "",
+    "catalyst_lib_path": "",
     "checkpoint": false,
-    "checkpoint_freq": 0,
+    "checkpoint_freq": 100000,
     "checkpoint_output": "",
     "restart": false,
     "restart_input": "",
     "adios_config": "",
     "adios_span": false,
-    "adios_memory_selection": false,
+    "adios_memory_selection": true,
     "mesh_type": "",
-    "kombynelite_script_path": ""
+    "kombynelite_script_path": "kombyne-multi-pipeline.yaml"
 }
