--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,27 +9,51 @@ stages:          # List of stages for jobs, and their order of execution
   - test
 
 docker_build:
-  # This job builds the Docker image from the Dockerfile and pushes it to the
-  # GitLab Container Registry. It only runs on the main/master branch.
   stage: build
-  image: docker:latest
+  # Pinned versions for stability
+  image: docker:24.0.5
   services:
-    - docker:dind
+    - name: docker:24.0.5-dind
+      alias: docker # This alias is important for the DOCKER_HOST variable
+
+  # Variables to ensure a stable connection to the dind service
+  variables:
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_TLS_CERTDIR: ""
+    DOCKER_DRIVER: overlay2
+
   before_script:
-    # $CI_REGISTRY_USER, $CI_REGISTRY_PASSWORD, and $CI_REGISTRY are predefined
-    # GitLab CI/CD variables that allow Docker to log in to the project's registry.
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+
   script:
-    # Build the Docker image. $CI_REGISTRY_IMAGE is a predefined variable that
-    # resolves to the correct registry path for this project. We explicitly add
-    # our desired image name, 'kaust-viz-app'.
-    - docker build -t "$CI_REGISTRY_IMAGE/kaust-viz-app:latest" -t "$CI_REGISTRY_IMAGE/kaust-viz-app:$CI_COMMIT_REF_SLUG" .
-    # Push both the 'latest' and the branch-specific tag to the registry.
-    - docker push "$CI_REGISTRY_IMAGE/kaust-viz-app:latest"
+    # Attempt to pull the latest image to use as a build cache.
+    # The '|| true' ensures the job doesn't fail if the image doesn't exist yet.
+    - docker pull "$CI_REGISTRY_IMAGE/kaust-viz-app:latest" || true
+
+    # Build the Docker image using the pulled image as a cache
+    - docker build
+      --cache-from "$CI_REGISTRY_IMAGE/kaust-viz-app:latest"
+      --tag "$CI_REGISTRY_IMAGE/kaust-viz-app:latest"
+      --tag "$CI_REGISTRY_IMAGE/kaust-viz-app:$CI_COMMIT_REF_SLUG"
+      .
+
+    # Push the commit-specific tag on every build
     - docker push "$CI_REGISTRY_IMAGE/kaust-viz-app:$CI_COMMIT_REF_SLUG"
+
+    # 🔄 Only push the 'latest' tag if we are on the default branch
+    - |
+      if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
+        echo "Pushing latest tag from default branch..."
+        docker push "$CI_REGISTRY_IMAGE/kaust-viz-app:latest"
+      else
+        echo "Not on the default branch. Skipping push of latest tag."
+      fi
+
+  # This rule builds on every commit except for tags
   rules:
-    # This ensures the Docker image is only built for commits to the default branches.
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_TAG
+      when: never
+    - when: on_success
 
 paraview-test-job:   # This job runs in the test stage.
   stage: test
