--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,9 +51,9 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          # Use GitHub Actions cache for faster builds
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          # Use local cache for self-hosted runners
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
 
   ############################################################################
   # TEST JOBS: Run ParaView and VisIt tests.
@@ -67,6 +67,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ParaView Test Suite
+        shell: bash
         run: |
           echo "Running ParaView Tests"
           sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 libgl1-mesa-glx
@@ -105,6 +106,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run VisIt Test Suite
+        shell: bash
         run: |
           echo "Running VisIt Tests"
           sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 curl zip unzip libgl1-mesa-glx
