--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
+          flavor: latest=false
           tags: |
             # Create a tag for the branch name (e.g., my-feature)
             type=ref,event=branch
@@ -67,7 +68,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ParaView Test Suite
-        shell: bash
+        shell: wsl bash
         run: |
           echo "Running ParaView Tests"
           sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 libgl1-mesa-glx
@@ -106,7 +107,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run VisIt Test Suite
-        shell: bash
+        shell: wsl bash
         run: |
           echo "Running VisIt Tests"
           sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 curl zip unzip libgl1-mesa-glx
