--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ParaView Test Suite
-        shell: wsl bash
+        shell: wsl -e bash {0}
         run: |
           echo "Running ParaView Tests"
           sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 libgl1-mesa-glx
@@ -107,7 +107,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run VisIt Test Suite
-        shell: wsl bash
+        shell: wsl -e bash {0}
         run: |
           echo "Running VisIt Tests"
           sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 curl zip unzip libgl1-mesa-glx
