--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ParaView Test Suite
-        shell: wsl -e bash {0}
+        shell: wsl --cd . --exec bash -ic
         run: |
           echo "Running ParaView Tests"
           sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 libgl1-mesa-glx
@@ -112,7 +112,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run VisIt Test Suite
-        shell: wsl -e bash {0}
+        shell: wsl --cd . --exec bash -ic
         run: |
           echo "Running VisIt Tests"
           sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 curl zip unzip libgl1-mesa-glx
